added cookie consent banner, fixed html language to german

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script type="text/plain" data-type="application/javascript" data-name="google-tag-manager">
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WHXPRBM');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+  <script type="text/plain" data-type="application/javascript" data-name="google-analytics" async
+    src="https://www.googletagmanager.com/gtag/js?id=G-R8E1BMDL2K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-R8E1BMDL2K');
+  </script>
+  <!-- make sure the config gets loaded before Klaro -->
+  <script defer type="text/javascript" src="config.js"></script>
+  <script defer data-config="klaroConfig" type="application/javascript"
+    src="https://cdn.kiprotect.com/klaro/v0.7/klaro.js">
+    </script>
+
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -28,16 +55,6 @@
     -->
   <title>Daniel Meisterling</title>
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R8E1BMDL2K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
-
-  gtag('config', 'G-R8E1BMDL2K');
-</script>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
