--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <script defer data-config="klaroConfig" type="application/javascript"
     src="https://cdn.kiprotect.com/klaro/v0.7/klaro.js">
     </script>
+  <!-- <script defer type="text/javascript" src="https://cdn.kiprotect.com/klaro/v0.7.11/klaro-no-css.js"></script> -->
 
   <meta charset="utf-8" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -37,6 +38,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Daniel Meisterling Portfolio" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="stylesheet" href="klaro.css" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <!--
